devops/standalone_kube_install/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comparia-backend
  labels:
    part: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      part: backend
  template:
    metadata:
      labels:
        part: backend
    spec:
      containers:
        - name: backend
          image: registry-placeholder/languia
          imagePullPolicy: Always
          command:
            - uv
            - run
            - uvicorn
            - backend.main:app
            - --host
            - 0.0.0.0
            - --port
            - "80"
            - --timeout-graceful-shutdown
            - "60"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              port: 80
              path: /docs
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
