devops/standalone_kube_install/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: comparia-postgres
  labels:
    part: postgres
spec:
  replicas: 1
  serviceName: comparia-postgres
  selector:
    matchLabels:
      part: postgres
  template:
    metadata:
      labels:
        part: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - comparia
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - comparia
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
