devops/standalone_kube_install/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: comparia-redis
  labels:
    part: redis
spec:
  replicas: 1
  serviceName: comparia-redis
  selector:
    matchLabels:
      part: redis
  template:
    metadata:
      labels:
        part: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
